--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<html>
+<head>
+    <link rel="alternate"
+      href="android-app://com.kkkkan/a" />
+</head>
+<body> Hello World </body>
+</html>
